--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">FFTTest</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="listen_button">Listen</string>
+    <string name="stop_button">Stop</string>
+    <string name="initial_data_chart">Initial audio data chart</string>
+    <string name="initial_chart_button">Initial data chart</string>
+    <string name="fft_chart_button">FFT data chart</string>
 
 </resources>
