--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">FFTTest</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Learn Guitar Chords</string>
     <string name="action_settings">Settings</string>
     <string name="listen_button">Listen</string>
     <string name="stop_button">Stop</string>
